--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
+  "dependencies": {
+    "subgraph-isomorphism": "^1.0.0"
+  },
   "main": "lib/index.js",
   "license": "Apache-2.0",
   "version": "0.0.0",
