--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,10 +25,19 @@
     "strictNullChecks": true,
     "strictPropertyInitialization": true,
     "stripInternal": true,
-    "target": "ES2019"
+    "target": "es2019",
+    "baseUrl": "./",
+    "paths": {
+      "*": [
+        "@types/*"
+      ]
+    }
   },
   "include": [
     "src/**/*.ts"
   ],
-  "exclude": []
+  "exclude": [
+    "node_modules",
+    "@types/*"
+  ]
 }
