--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@rimbu/bimap": "^2.0.1",
     "subgraph-isomorphism": "^1.0.0"
   },
   "main": "lib/index.js",
